fixture-catalog/fixtures/core/valid/top-level-simple.ts
import { gql } from "../../../graphql-system";

export const userFragment = gql.default(({ fragment }) => fragment("UserFragment", "Employee")`{ id }`());
